fix:product detail

--- a/shop.html
+++ b/shop.html
@@ -252,11 +252,116 @@
                             </ul>
                         </div>
                     </div>
-
                 </div>
             </div>
         </nav>
 
+        <!-- shopping cart 購物車內容 -->
+        <div id="cartShow" class="hidden relative z-20" role="dialog" aria-modal="true">
+            <!-- 灰色背景 -->
+            <div class="hidden sm:fixed sm:inset-0 sm:block sm:bg-gray-500/75 sm:transition-opacity" aria-hidden="true">
+            </div>
+
+            <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
+                <div class="flex min-h-full items-stretch justify-center text-center sm:items-center sm:px-6 lg:px-8">
+                    <div class="flex w-full max-w-3xl transform text-left text-base transition sm:my-8">
+                        <form
+                            class="relative flex w-full flex-col overflow-hidden bg-white pb-8 pt-6 sm:rounded-lg sm:pb-6 lg:py-8">
+                            <div class="flex items-center justify-between px-4 sm:px-6 lg:px-8">
+                                <h2 class="text-lg font-medium text-gray-800">Shopping Cart</h2>
+                                <button id="cartCloseBtn" type="button" class="text-gray-400 hover:text-gray-500">
+                                    <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                        stroke="currentColor" aria-hidden="true" data-slot="icon">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                                    </svg>
+                                </button>
+                            </div>
+
+                            <div id="cartEmpty"
+                                class="hidden w-80 h-80 text-gray-400 text-wrap break-words flex justify-center items-center text-2xl">
+                                <p class="absolute top-32 left-20 md:top-44 md:left-64">Cart is empty.</p>
+                            </div>
+
+                            <section id="cartContainer" aria-labelledby="cart-heading">
+                                <!--cart 購物車內容  -->
+                                <div id="cartTemplate" role="list"
+                                    class="divide-y divide-gray-200 px-4 sm:px-6 lg:px-8">
+                                    <li class="flex py-8 text-sm sm:items-center">
+                                        <img id="cartImg" src="" alt=""
+                                            class="size-24 flex-none rounded-lg border border-gray-200 sm:size-32">
+                                        <div
+                                            class="font ml-4 grid flex-auto grid-cols-1 grid-rows-1 items-start gap-x-5 gap-y-3 sm:ml-6 sm:flex sm:items-center sm:gap-0">
+                                            <div class="row-end-1 flex-auto sm:pr-6">
+                                                <h3 class="text-md text-gray-900">
+                                                    <a id="cartTitle" href="#"></a>
+                                                </h3>
+                                                <p id="cartBrief" class="mt-1 text-[14px] font-sans text-gray-400">
+                                                </p>
+                                            </div>
+                                            <p
+                                                class="row-span-2 row-end-2 text-md text-gray-800 sm:order-1 sm:ml-6 sm:w-1/3 sm:flex-none sm:text-right">
+                                                €&nbsp;<span id="cartPrice">150</span></p>
+                                            <div class="flex items-center sm:block sm:flex-none sm:text-center">
+                                                <div class="flex justify-center items-center mb-2 gap-1">
+                                                    <button id="cartMinusBtn"
+                                                        class="flex justify-center items-center w-8 h-8 border-2 rounded-md text-gray-800 hover:bg-subPurple hover:text-lightGray active:opacity-50"><i
+                                                            class="fa-solid fa-minus"></i></button>
+                                                    <input id="cartQuantity" type="number"
+                                                        class="no-spinner w-12 h-8 border-2 text-center " value="1">
+                                                    <button id="cartPlusBtn"
+                                                        class="flex justify-center items-center w-8 h-8 border-2 rounded-md hover:bg-subPurple hover:text-lightGray active:opacity-50"><i
+                                                            class="fa-solid fa-plus"></i></button>
+                                                </div>
+
+                                                <button id="cartRemoveBtn" type="button"
+                                                    class="ml-4 text-[10px] text-subPurple hover:opacity-50 sm:ml-0 sm:mt-2">
+                                                    <span>Remove</span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <hr><br>
+                                </ㄎ>
+                            </section>
+
+                            <section aria-labelledby="summary-heading" class="hidden mt-auto sm:px-6 lg:px-8">
+                                <div class="bg-gray-50 p-6 sm:rounded-lg sm:p-8">
+                                    <h2 id="summary-heading" class="sr-only">Order summary</h2>
+
+                                    <div class="flow-root">
+                                        <dl class="-my-4 divide-y divide-gray-200 text-sm">
+                                            <div class="flex items-center justify-between py-4">
+                                                <dt class="text-gray-400">Subtotal</dt>
+                                                <dd id="cartSubtotal" class="font-medium text-gray-400">€&nbsp;<span
+                                                        class="cartSubtotal">150</span></dd>
+                                            </div>
+                                            <div class="flex items-center justify-between py-4">
+                                                <dt class="text-gray-400">Tax&nbsp;&nbsp;&nbsp;<span
+                                                        class="text-subPurple text-[16px] hover:opacity-50 cursor-pointer"><i
+                                                            class="fa-solid fa-circle-question"></i></span></dt>
+                                                <dd id="cartTax" class="font-medium text-gray-400">
+                                                    €&nbsp;<span>0.00</span></dd>
+                                            </div>
+                                            <div class="flex items-center justify-between py-4">
+                                                <dt class="text-base font-medium text-gray-800">Order total</dt>
+                                                <dd id="cartOrderTotal" class="text-base font-medium text-gray-800">
+                                                    €&nbsp;<span class="cartOrderTotal">150.3</span></dd>
+                                            </div>
+                                        </dl>
+                                    </div>
+                                </div>
+                            </section>
+
+                            <div class="hidden mt-8 flex justify-end px-4 sm:px-6 lg:px-8">
+                                <button type="submit"
+                                    class="rounded-md border border-transparent bg-subPurple px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-mainYellow hover:text-gray-800 active:opacity-50">Continue
+                                    to Payment</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Swiper -->
         <section id="bannerSwiper"
             class="swiper w-screen h-[300px] md:h-[450px] lg:h-[600px] flex justify-center item-center mt-[80px]">
@@ -319,113 +424,6 @@
     </header>
 
     <main>
-        <!-- shopping cart 購物車內容 -->
-        <div id="cartShow" class="hidden relative z-20" role="dialog" aria-modal="true">
-            <!-- 灰色背景 -->
-            <div class="hidden sm:fixed sm:inset-0 sm:block sm:bg-gray-500/75 sm:transition-opacity" aria-hidden="true">
-            </div>
-
-            <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
-                <div class="flex min-h-full items-stretch justify-center text-center sm:items-center sm:px-6 lg:px-8">
-                    <div class="flex w-full max-w-3xl transform text-left text-base transition sm:my-8">
-                        <form
-                            class="relative flex w-full flex-col overflow-hidden bg-white pb-8 pt-6 sm:rounded-lg sm:pb-6 lg:py-8">
-                            <div class="flex items-center justify-between px-4 sm:px-6 lg:px-8">
-                                <h2 class="text-lg font-medium text-gray-800">Shopping Cart</h2>
-                                <button id="cartCloseBtn" type="button" class="text-gray-400 hover:text-gray-500">
-                                    <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                        stroke="currentColor" aria-hidden="true" data-slot="icon">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-                                    </svg>
-                                </button>
-                            </div>
-
-                            <div id="cartEmpty"
-                                class="w-80 h-80 text-gray-400 text-wrap break-words flex justify-center items-center text-2xl">
-                                <p class="absolute top-32 left-20 md:top-44 md:left-64">Cart is empty.</p>
-                            </div>
-
-                            <section id="cartContainer" aria-labelledby="cart-heading">
-                                <!--cart 購物車內容  -->
-                                <template id="cartTemplate" role="list"
-                                    class="divide-y divide-gray-200 px-4 sm:px-6 lg:px-8">
-                                    <li class="flex py-8 text-sm sm:items-center">
-                                        <img id="cartImg" src="" alt=""
-                                            class="size-24 flex-none rounded-lg border border-gray-200 sm:size-32">
-                                        <div
-                                            class="font ml-4 grid flex-auto grid-cols-1 grid-rows-1 items-start gap-x-5 gap-y-3 sm:ml-6 sm:flex sm:items-center sm:gap-0">
-                                            <div class="row-end-1 flex-auto sm:pr-6">
-                                                <h3 class="text-md text-gray-900">
-                                                    <a id="cartTitle" href="#"></a>
-                                                </h3>
-                                                <p id="cartBrief" class="mt-1 text-[14px] font-sans text-gray-400">
-                                                </p>
-                                            </div>
-                                            <p
-                                                class="row-span-2 row-end-2 text-md text-gray-800 sm:order-1 sm:ml-6 sm:w-1/3 sm:flex-none sm:text-right">
-                                                €&nbsp;<span id="cartPrice">150</span></p>
-                                            <div class="flex items-center sm:block sm:flex-none sm:text-center">
-                                                <div class="flex justify-center items-center mb-2 gap-1">
-                                                    <button id="cartMinusBtn"
-                                                        class="flex justify-center items-center w-8 h-8 border-2 rounded-md text-gray-800 hover:bg-subPurple hover:text-lightGray active:opacity-50"><i
-                                                            class="fa-solid fa-minus"></i></button>
-                                                    <input id="cartQuantity" type="number"
-                                                        class="no-spinner w-12 h-8 border-2 text-center " value="1">
-                                                    <button id="cartPlusBtn"
-                                                        class="flex justify-center items-center w-8 h-8 border-2 rounded-md hover:bg-subPurple hover:text-lightGray active:opacity-50"><i
-                                                            class="fa-solid fa-plus"></i></button>
-                                                </div>
-
-                                                <button id="cartRemoveBtn" type="button"
-                                                    class="ml-4 text-[10px] text-subPurple hover:opacity-50 sm:ml-0 sm:mt-2">
-                                                    <span>Remove</span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <hr><br>
-                                </template>
-                            </section>
-
-                            <section aria-labelledby="summary-heading" class="hidden mt-auto sm:px-6 lg:px-8">
-                                <div class="bg-gray-50 p-6 sm:rounded-lg sm:p-8">
-                                    <h2 id="summary-heading" class="sr-only">Order summary</h2>
-
-                                    <div class="flow-root">
-                                        <dl class="-my-4 divide-y divide-gray-200 text-sm">
-                                            <div class="flex items-center justify-between py-4">
-                                                <dt class="text-gray-400">Subtotal</dt>
-                                                <dd id="cartSubtotal" class="font-medium text-gray-400">€&nbsp;<span
-                                                        class="cartSubtotal">150</span></dd>
-                                            </div>
-                                            <div class="flex items-center justify-between py-4">
-                                                <dt class="text-gray-400">Tax&nbsp;&nbsp;&nbsp;<span
-                                                        class="text-subPurple text-[16px] hover:opacity-50 cursor-pointer"><i
-                                                            class="fa-solid fa-circle-question"></i></span></dt>
-                                                <dd id="cartTax" class="font-medium text-gray-400">
-                                                    €&nbsp;<span>0.00</span></dd>
-                                            </div>
-                                            <div class="flex items-center justify-between py-4">
-                                                <dt class="text-base font-medium text-gray-800">Order total</dt>
-                                                <dd id="cartOrderTotal" class="text-base font-medium text-gray-800">
-                                                    €&nbsp;<span class="cartOrderTotal">150.3</span></dd>
-                                            </div>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </section>
-
-                            <div class="hidden mt-8 flex justify-end px-4 sm:px-6 lg:px-8">
-                                <button type="submit"
-                                    class="rounded-md border border-transparent bg-subPurple px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-mainYellow hover:text-gray-800 active:opacity-50">Continue
-                                    to Payment</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <!-- product cards -->
         <div class="sm:px-12 lg:px-60">
             <div class="mx-auto max-w-2xl px-4 py-10 sm:py-14 sm:px-6 lg:max-w-5xl lg:px-8">
@@ -440,7 +438,7 @@
                 <div id="productContainer"
                     class="grid gap-y-4 grid-cols-2 gap-x-2 sm:grid-cols-3 sm:gap-x-6 sm:gap-y-10 lg:grid-cols-4 lg:gap-x-8 mb-20">
                     <template id="productTemplate">
-                        <div
+                        <a id="productUrl"  href="" target="_blank" id="viewDetailsBtn"
                             class="group relative cursor-pointer flex flex-col max-h-[800px] rounded-lg shadow-lg border border-gray-200 bg-white">
                             <div class="px-3 pt-3">
                                 <img id="productImg" src="" alt=""
@@ -458,10 +456,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <!-- <button id="addToCartBtn" type="button" title="add to cart"
-                                class="absolute bottom-5 right-4 w-8 h-8 border-2 shadow-sm text-subPurple hover:bg-subPurple hover:text-lightGray active:opacity-50 rounded-md flex justify-center items-center p-3"><i
-                                    class="fa-solid fa-plus"></i></button> -->
-                        </div>
+                        </a>
                     </template>
                 </div>
 
