--- a/shop.html
+++ b/shop.html
@@ -287,59 +287,60 @@
                                                 </button>
                                             </div>
 
-                                            <div id="cartEmpty"
+                                            <!-- <div id="cartEmpty"
                                                 class="w-80 h-80 text-gray-400 text-wrap break-words flex justify-center items-center text-2xl">
                                                 <p class="absolute top-32 left-20 md:top-44 md:left-64">Cart is empty.
                                                 </p>
-                                            </div>
+                                            </div> -->
 
                                             <section id="cartContainer" aria-labelledby="cart-heading">
-                                                <div id="cartTemplate" role="list"
-                                                    class="hidden divide-y divide-gray-200 px-4 sm:px-6 lg:px-8">
-                                                    <li class="flex py-8 text-sm sm:items-center">
-                                                        <img id="cartImg" src="" alt=""
-                                                            class="size-24 flex-none rounded-lg border border-gray-200 sm:size-32">
-                                                        <div
-                                                            class="font ml-4 grid flex-auto grid-cols-1 grid-rows-1 items-start gap-x-5 gap-y-3 sm:ml-6 sm:flex sm:items-center sm:gap-0">
-                                                            <div class="row-end-1 flex-auto sm:pr-6">
-                                                                <h3 class="text-md text-gray-900">
-                                                                    <a id="cartTitle" href="#"></a>
-                                                                </h3>
-                                                                <p id="cartBrief"
-                                                                    class="mt-1 text-[14px] font-sans text-gray-400">
-                                                                </p>
-                                                            </div>
-                                                            <p
-                                                                class="row-span-2 row-end-2 text-md text-gray-800 sm:order-1 sm:ml-6 sm:w-1/3 sm:flex-none sm:text-right">
-                                                                €&nbsp;<span id="cartPrice">150</span></p>
+                                                <div id="cartTemplate">
+                                                    <div class="divide-y divide-gray-200 px-4 sm:px-6 lg:px-8">
+                                                        <li class="flex py-8 text-sm sm:items-center">
+                                                            <img id="cartImg" src="./src/img/product-img-5.png" alt=""
+                                                                class="size-24 flex-none rounded-lg border border-gray-200 sm:size-32">
                                                             <div
-                                                                class="flex items-center sm:block sm:flex-none sm:text-center">
-                                                                <div
-                                                                    class="flex justify-center items-center mb-2 gap-1">
-                                                                    <button id="cartMinusBtn"
-                                                                        class="flex justify-center items-center w-8 h-8 border-2 rounded-md text-gray-800 hover:bg-subPurple hover:text-lightGray active:opacity-50"><i
-                                                                            class="fa-solid fa-minus"></i></button>
-                                                                    <input id="cartQuantity" type="number"
-                                                                        class="no-spinner w-12 h-8 border-2 text-center "
-                                                                        value="1">
-                                                                    <button id="cartPlusBtn"
-                                                                        class="flex justify-center items-center w-8 h-8 border-2 rounded-md hover:bg-subPurple hover:text-lightGray active:opacity-50"><i
-                                                                            class="fa-solid fa-plus"></i></button>
+                                                                class="font ml-4 grid flex-auto grid-cols-1 grid-rows-1 items-start gap-x-5 gap-y-3 sm:ml-6 sm:flex sm:items-center sm:gap-0">
+                                                                <div class="row-end-1 flex-auto sm:pr-6">
+                                                                    <h3 class="text-md text-gray-900">
+                                                                        <a id="cartTitle" href="#">Jökulsárlón Glacier Lagoon Boat Tour</a>
+                                                                    </h3>
+                                                                    <p id="cartBrief"
+                                                                        class="mt-1 text-[14px] font-sans text-gray-400">North
+                                                                    </p>
                                                                 </div>
+                                                                <p
+                                                                    class="row-span-2 row-end-2 text-md text-gray-800 sm:order-1 sm:ml-6 sm:w-1/3 sm:flex-none sm:text-right">
+                                                                    €&nbsp;<span id="cartPrice">350</span></p>
+                                                                <div
+                                                                    class="flex items-center sm:block sm:flex-none sm:text-center">
+                                                                    <div
+                                                                        class="flex justify-center items-center mb-2 gap-1">
+                                                                        <button id="cartMinusBtn"
+                                                                            class="flex justify-center items-center w-8 h-8 border-2 rounded-md text-gray-800 hover:bg-subPurple hover:text-lightGray active:opacity-50"><i
+                                                                                class="fa-solid fa-minus"></i></button>
+                                                                        <input id="cartQuantity" type="number"
+                                                                            class="no-spinner w-12 h-8 border-2 text-center "
+                                                                            value="1">
+                                                                        <button id="cartPlusBtn"
+                                                                            class="flex justify-center items-center w-8 h-8 border-2 rounded-md hover:bg-subPurple hover:text-lightGray active:opacity-50"><i
+                                                                                class="fa-solid fa-plus"></i></button>
+                                                                    </div>
 
-                                                                <button id="cartRemoveBtn" type="button"
-                                                                    class="ml-4 text-[10px] text-subPurple hover:opacity-50 sm:ml-0 sm:mt-2">
-                                                                    <span>Remove</span>
-                                                                </button>
+                                                                    <button id="cartRemoveBtn" type="button"
+                                                                        class="ml-4 text-[10px] text-subPurple hover:opacity-50 sm:ml-0 sm:mt-2">
+                                                                        <span>Remove</span>
+                                                                    </button>
+                                                                </div>
                                                             </div>
-                                                        </div>
-                                                    </li>
-                                                    <hr><br>
-                                                    </ㄎ>
+                                                        </li>
+                                                        <hr><br>
+                                                    </div>
+                                                </div>
                                             </section>
 
                                             <section aria-labelledby="summary-heading"
-                                                class="hidden mt-auto sm:px-6 lg:px-8">
+                                                class="mt-auto sm:px-6 lg:px-8">
                                                 <div class="bg-gray-50 p-6 sm:rounded-lg sm:p-8">
                                                     <h2 id="summary-heading" class="sr-only">Order summary</h2>
 
@@ -348,7 +349,7 @@
                                                             <div class="flex items-center justify-between py-4">
                                                                 <dt class="text-gray-400">Subtotal</dt>
                                                                 <dd id="cartSubtotal" class="font-medium text-gray-400">
-                                                                    €&nbsp;<span class="cartSubtotal">150</span></dd>
+                                                                    €&nbsp;<span class="cartSubtotal">350</span></dd>
                                                             </div>
                                                             <div class="flex items-center justify-between py-4">
                                                                 <dt class="text-gray-400">Tax&nbsp;&nbsp;&nbsp;<span
@@ -364,7 +365,7 @@
                                                                 </dt>
                                                                 <dd id="cartOrderTotal"
                                                                     class="text-base font-medium text-gray-800">
-                                                                    €&nbsp;<span class="cartOrderTotal">150.3</span>
+                                                                    €&nbsp;<span class="cartOrderTotal">350.00</span>
                                                                 </dd>
                                                             </div>
                                                         </dl>
@@ -562,7 +563,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./src/js/navShop.js"></script>
     <script src="./src/js/banner.js"></script>
-    <script src="./src/js/productsGet.js"></script>
+    <script src="./src/js/productCardDatas.js"></script>
 
 </body>
 
